get agent to do research

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
     "        self.terminating = terminating\n",
     "\n",
     "    @abstractmethod\n",
-    "    def run(self, conversation: Conversation, **kwargs) -> str:\n",
+    "    def run(self, conversation: Conversation) -> str:\n",
     "        pass\n",
     "\n",
     "    @abstractmethod\n",
@@ -52,10 +52,10 @@
     "\n",
     "# Reasoning tool (non‐terminating)\n",
     "class Reasoning(Tool):\n",
-    "    def __init__(self):\n",
-    "        super().__init__(name=\"reasoning\", terminating=False)\n",
+    "    def __init__(self, terminating: bool = False):\n",
+    "        super().__init__(name=\"reasoning\", terminating=terminating)\n",
     "\n",
-    "    def run(self, conversation: Conversation, **kwargs) -> str:\n",
+    "    def run(self, conversation: Conversation) -> str:\n",
     "        with open(\"templates/reasoning.jinja2\", \"r\") as file:\n",
     "            reasoning_template = jinja2.Template(file.read()).render()\n",
     "        conversation.add_message(\"system\", reasoning_template)\n",
@@ -75,12 +75,15 @@
     "\n",
     "# Respond tool (terminating) – note the extra parameter `response_type`\n",
     "class Respond(Tool):\n",
-    "    def __init__(self, response_types: List[str]):\n",
+    "    def __init__(self, response_types: List[str], terminating: bool = True):\n",
     "        # Mark this tool as terminating since its response is meant to be final.\n",
-    "        super().__init__(name=\"respond\", terminating=True)\n",
+    "        super().__init__(name=\"respond\", terminating=terminating)\n",
     "        self.response_types = response_types\n",
     "\n",
-    "    def run(self, conversation: Conversation, response_type: str, **kwargs) -> str:\n",
+    "    def run(self, conversation: Conversation, response_type: str = \"\") -> str:\n",
+    "        if not response_type:\n",
+    "            response_type = \"respond\"\n",
+    "\n",
     "        with open(f\"templates/{response_type}.jinja2\", \"r\") as file:\n",
     "            template_content = jinja2.Template(file.read()).render()\n",
     "        conversation.add_message(\"system\", template_content)\n",
@@ -111,11 +114,11 @@
     "\n",
     "# Search tool (non‐terminating)\n",
     "class Search(Tool):\n",
-    "    def __init__(self):\n",
-    "        super().__init__(name=\"search\", terminating=False)\n",
+    "    def __init__(self, terminating: bool = False):\n",
+    "        super().__init__(name=\"search\", terminating=terminating)\n",
     "        self.tavily_client = TavilyClient(api_key=os.getenv(\"TAVILY_API_KEY\"))\n",
     "\n",
-    "    def run(self, conversation: Conversation, query: str, **kwargs) -> str:\n",
+    "    def run(self, conversation: Conversation, query: str) -> str:\n",
     "        response = self.tavily_client.search(query)\n",
     "        return response\n",
     "\n",
@@ -145,35 +148,30 @@
     "        self,\n",
     "        name: str,\n",
     "        description: str,\n",
+    "        fallback_tool: Tool,\n",
     "        max_turns: int = 3,\n",
+    "        terminating: bool = False,\n",
     "        tools: List[Tool] = [],\n",
-    "        terminating_tools: List[Tool] = None,\n",
-    "        forced_terminating_tool: Tool = None,\n",
     "    ):\n",
-    "        self._name = name\n",
+    "        super().__init__(name=name, terminating=terminating)\n",
     "        self.description = description\n",
     "        self.max_turns = max_turns\n",
     "        self.available_tools = {tool.name: tool for tool in tools}\n",
-    "        self.terminating_tools = terminating_tools\n",
-    "        self.forced_terminating_tool = forced_terminating_tool\n",
-    "\n",
-    "    @property\n",
-    "    def name(self) -> str:\n",
-    "        return self._name\n",
+    "        self.fallback_tool = fallback_tool\n",
     "\n",
     "    def run(self, conversation: Conversation) -> str:\n",
     "        for turn in range(self.max_turns):\n",
     "            tool, function_args = self.get_next_action(conversation)\n",
     "            print(f\"Using the {tool.name} tool with arguments {function_args}\")\n",
     "            response = tool.run(conversation, **function_args)\n",
-    "            if tool.name == self.terminating_tool.name:\n",
+    "            if tool.terminating:\n",
     "                return response\n",
     "\n",
     "            conversation.add_message(\n",
     "                \"user\",\n",
-    "                f\"The {tool.name} tool has been used and it responded with {response}\",\n",
+    "                f\"The {tool.name} tool has been used with args {function_args} and it responded with {response}\",\n",
     "            )\n",
-    "        return self.terminating_tool.run(self.conversation)\n",
+    "        return self.fallback_tool.run(self.conversation)\n",
     "\n",
     "    def get_next_action(self, conversation: Conversation) -> Tool:\n",
     "        response = conversation.get_response(\n",
@@ -204,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -223,38 +221,80 @@
      "text": [
       "Using the research_agent tool with arguments {}\n",
       "Using the search tool with arguments {'query': 'climate litigation'}\n",
-      "Using the reasoning tool with arguments {}\n",
       "Using the respond tool with arguments {'response_type': 'write_report'}\n",
-      "Using the respond tool with arguments {'response_type': 'clarification'}\n",
-      "Okay, I see that you're interested in researching climate litigation. Based on your initial query and the search results, it seems like you want to understand:\n",
+      "Okay, I will research climate litigation and produce a comprehensive report based on my findings.\n",
       "\n",
-      "*   **What climate litigation is:** The definition, types, and trends of climate change litigation.\n",
-      "*   **Key players:** Who is involved in these cases (plaintiffs and defendants).\n",
-      "*   **Goals of climate litigation:** What these cases aim to achieve (policy changes, compensation, etc.).\n",
-      "*   **Impact and challenges:** The successes, limitations, and overall impact of climate litigation.\n",
+      "**Report on Climate Litigation**\n",
       "\n",
-      "Is that a correct assessment of what you're hoping to achieve with this research? Are there any specific aspects of climate litigation that you're particularly interested in (e.g., a specific region, type of case, or legal theory)?\n",
+      "**Introduction**\n",
+      "\n",
+      "Climate change litigation is an increasingly significant area of environmental law, employing legal practices to influence climate change mitigation efforts by public institutions, governments, and companies. This report aims to provide an overview of climate litigation, exploring its types, trends, impacts, and challenges.\n",
+      "\n",
+      "**Definition and Scope**\n",
+      "\n",
+      "Climate change litigation involves legal actions taken to address the causes and impacts of climate change. These cases utilize various legal theories and are brought before courts and tribunals worldwide.\n",
+      "\n",
+      "**Types and Trends**\n",
+      "\n",
+      "Climate litigation cases are diverse, encompassing various legal arguments and objectives. Key categories include:\n",
+      "\n",
+      "*   **Challenges to Government Climate Targets and Policies:** Cases challenging the adequacy of government climate policies and their implementation. A notable example is the \"Urgenda\" case in the Netherlands, where the court ordered the government to cut emissions.\n",
+      "*   **Fossil Fuel Industry Accountability:** Lawsuits seeking to hold fossil fuel companies liable for their contribution to climate change and associated damages.\n",
+      "*   **Climate Rights:** Litigation based on constitutional or human rights arguments, asserting a right to a safe and stable climate.\n",
+      "*   **Corporate Liability and Disclosures:** Cases related to corporate disclosures of climate-related risks and the potential liability of companies for climate-related impacts.\n",
+      "*   **Fraud and Consumer Protection:** Lawsuits alleging that companies have misled consumers about the environmental impacts of their products or services.\n",
+      "*   **Domestic Enforcement:** Litigation focused on enforcing existing environmental laws and regulations related to climate change.\n",
+      "*   **Adaptation:** Cases related to climate change adaptation measures and their effectiveness.\n",
+      "\n",
+      "**Impacts**\n",
+      "\n",
+      "Climate litigation is having a growing impact on climate policy and action:\n",
+      "\n",
+      "*   **Setting Precedents:** Litigation has successfully challenged government actions and high-emitting projects, establishing precedents for climate action and emissions reduction.\n",
+      "*   **Influencing Corporate Behavior:** Lawsuits and the threat of litigation are prompting companies to assess and disclose climate-related risks and reduce their emissions.\n",
+      "*   **Raising Awareness:** Climate litigation helps raise public awareness about the urgency of climate change and the responsibility of governments and corporations.\n",
+      "\n",
+      "**Challenges and Limitations**\n",
+      "\n",
+      "Despite its potential, climate litigation faces several challenges:\n",
+      "\n",
+      "*   **Causation:** Establishing a direct causal link between emissions from specific entities and specific climate change impacts can be complex.\n",
+      "*   **Standing:** Plaintiffs must demonstrate that they have suffered or are likely to suffer harm as a result of climate change to have standing to sue.\n",
+      "*   **Jurisdiction:** Determining the appropriate jurisdiction for climate change cases, particularly those involving multinational corporations, can be challenging.\n",
+      "*   **Political and Economic Considerations:** Courts may be hesitant to intervene in matters of climate policy, which are often seen as the responsibility of governments.\n",
+      "\n",
+      "**Key Resources and Further Information**\n",
+      "\n",
+      "*   **Sabin Center for Climate Change Law:** Provides comprehensive information on climate litigation worldwide, including databases, publications, and amicus briefs.\n",
+      "*   **Global Climate Litigation Report: 2023 Status Review:** Offers a comprehensive overview of the current state and trends of climate change litigation worldwide.\n",
+      "\n",
+      "**Conclusion**\n",
+      "\n",
+      "Climate litigation is an evolving and dynamic field that plays a crucial role in advancing climate action. While challenges remain, it has the potential to hold governments and corporations accountable for their contributions to climate change and accelerate the transition to a low-carbon economy.\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "conversation = Conversation()\n",
     "conversation.add_message(\"system\", system_message)\n",
+    "\n",
+    "write_report = Respond(response_types=[\"write_report\"])\n",
+    "research_agent = Agent(\n",
+    "    name=\"research_agent\",\n",
+    "    description=\"This agent is designed to help users with research.\",\n",
+    "    tools=[Search(), Reasoning(), write_report],\n",
+    "    terminating=True,\n",
+    "    fallback_tool=write_report,\n",
+    ")\n",
     "\n",
     "respond = Respond(response_types=[\"respond\", \"clarification\"])\n",
     "\n",
     "agent = Agent(\n",
-    "    name=\"Autonomous market research agent\",\n",
+    "    name=\"main_agent\",\n",
     "    description=\"This agent is designed to help users with market research.\",\n",
-    "    tools=[\n",
-    "        Reasoning(),\n",
-    "        respond,\n",
-    "        research_agent\n",
-    "    ],\n",
-    "    terminating_tool=respond,\n",
+    "    tools=[Reasoning(), respond, research_agent],\n",
+    "    fallback_tool=respond,\n",
     ")\n",
     "\n",
     "conversation.add_message(\"user\", \"I want to research climate litigation\")\n",
